# ygo-card-renderer-rs

./: .gitignore  Cargo.toml  README.md  __font_dump.rs  cards.cdb  problem.md
.slim/: codemap.json
assets/yugioh/font/: filelist.csv
assets/yugioh/image/: filelist.csv
benches/: render.rs
model/: ygo-mask-medium-640.json  ygo-mask-medium-640.onnx
script/: c41546.lua
scripts/: build_bundle.py  render_single_card.ps1  render_tuning.ps1  tune_ser.py
src/: asset_bundle.rs  assets.rs  bundle_layout.rs  card_logic.rs  constants.rs  document.rs  facts.rs  layout.rs  lib.rs  mask_generator.rs  model.rs  pixel_ops.rs  rare_effect.rs  renderer.rs  ruby.rs  text.rs
src/document/: paint.rs  rare.rs
src/document/layers/: footer.rs  frame.rs  mod.rs  text.rs
src/rare_effect/: bright_border.rs  diamond_foil.rs  dot_grid.rs  holographic.rs  legacy.rs  math.rs  mod.rs  optical.rs  rainbow_foil.rs  secret.rs
src/renderer/: color.rs  draw_card.rs  effect_areas.rs  effect_ops.rs  mod.rs  tests.rs  text_ops.rs  visual_effects.rs
src/text/: draw.rs  engine.rs  measure.rs  mod.rs  ruby.rs  util.rs
tests/: render.rs
tmp/: ser_physical.py
