[package]
name = "ygo-card-renderer-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust card rendering core for Yu-Gi-Oh! custom card generation"
repository = "https://github.com/placeholder/ygo-card-renderer-rs"

[dependencies]
base64 = "0.22.1"
cosmic-text = "0.14"
fontdb = "0.16"
image = { version = "0.25", features = ["webp"] }
memmap2 = "0.9"
ort = { version = "=2.0.0-rc.12", optional = true }
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tiny-skia = "0.11"
ygo-woff2 = { path = "../ygo-woff2" }
ygopro-cdb-encode-rs = { path = "../ygopro-cdb-encode-rs" }

[features]
default = []
onnx-mask = ["dep:ort"]

[dev-dependencies]
brotli = "8.0.2"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.23.0"

[[bench]]
name = "render"
harness = false
