[package]
name = "ygo-card-renderer-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust card rendering core for Yu-Gi-Oh! custom card generation"
repository = "https://github.com/kkr223/ygo-card-renderer-rs"

[dependencies]
cosmic-text = { version = "0.14", default-features = false, features = ["std", "swash"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
memmap2 = "0.9"
ort = { version = "=2.0.0-rc.12", optional = true }
resvg = { version = "0.45.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tiny-skia = "0.11"
woff2-patched = "0.4.0"
bytes = "1"
icu_segmenter = { version = "2", features = ["compiled_data"] }
ygopro-cdb-encode-rs = { path = "../ygopro-cdb-encode-rs" }

[features]
default = []
onnx-mask = ["dep:ort"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false
